fix： 1. 增加时间范围的正确设定。

--- a/MoneyProgress/MoneyProgress/en.lproj/Localizable.strings
+++ b/MoneyProgress/MoneyProgress/en.lproj/Localizable.strings
@@ -107,3 +107,5 @@
 "touch all can touch" = "Touch! all can touch!";
 "Always touch fish" = "Always Day 1, Always Touch Fish!";
 "Not working yet" = "💰 Not working yet";
+"invalid_time_range_tip" = "Invalid time range";
+"time_range_tip" = "Please set up correct time range";
