--- a/MoneyProgress/MoneyProgress/zh-Hant.lproj/Localizable.strings
+++ b/MoneyProgress/MoneyProgress/zh-Hant.lproj/Localizable.strings
@@ -107,3 +107,5 @@
 "touch all can touch" = "摸！都可以摸！";
 "Always touch fish" = "Always Day 1, Always Touch Fish!";
 "Not working yet" = "💰 尚未開工";
+"invalid_time_range_tip" = "時間範圍無效";
+"time_range_tip" = "請設置正確的時間範圍";
