--- a/MoneyProgress/MoneyProgress/zh-Hans.lproj/Localizable.strings
+++ b/MoneyProgress/MoneyProgress/zh-Hans.lproj/Localizable.strings
@@ -86,6 +86,12 @@
 "You can earn %@ %@ in one second" = "您一秒钟能挣 %@ %@";
 
 /* No comment provided by engineer. */
+"You can earn %@ %@ in one minute" = "您一分钟能挣 %@ %@";
+
+/* No comment provided by engineer. */
+"You can earn %@ %@ in one hour" = "您一小时能挣 %@ %@";
+
+/* No comment provided by engineer. */
 "You can earn how much a day!" = "您一天能挣 %@ %@！";
 
 /* No comment provided by engineer. */
@@ -114,3 +120,12 @@
 
 /* No comment provided by engineer. */
 "💰 You have earned %.2f %@ today" = "💰 您今日已挣 %.2f %@";
+
+/* No comment provided by engineer. */
+"Until the end of get off work at %@ There are still %d minutes" = "距离下班 %@ 还有 %d 分";
+
+/* No comment provided by engineer. */
+"Until the end of get off work at %@ There are still %d hours %d minutes" = "距离下班 %@ 还有 %d 小时 %d 分";
+
+/* No comment provided by engineer. */
+"It’s time to get off work, you’re not still working overtime!" = "您已经下班啦，不会还在加班吧！";
